--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -10,3 +10,27 @@ button {
 button:hover {
     cursor: pointer;
 }
+
+.wrapper {
+    background-color: black;
+    border-radius: 1em;
+    padding: 1em;
+}
+
+.orange {
+    color: white;
+    background-color: #FF9500;
+}
+
+.gray {
+    color: white;
+    background-color: #505050;
+}
+
+.result {
+    color: white;
+    font-size: 4em;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1em;
+}
