--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -12,7 +12,7 @@ button:hover {
 }
 
 .wrapper {
-    background-color: black;
+    background-color: #1C1C1C;
     border-radius: 1em;
     padding: 1em;
 }
@@ -33,4 +33,9 @@ button:hover {
     display: flex;
     justify-content: flex-end;
     margin-right: 1em;
+}
+
+#btnZero {
+    width: 6.6em;
+    border-radius: 2em;
 }
